--- a/exercicios/ex022/fundo003.html
+++ b/exercicios/ex022/fundo003.html
@@ -9,13 +9,17 @@
         body {
             background-color: black;
         }
-        
+
         div.bloco{
-           background-image: url('imagens/wallpaper002.jpg');
+           background-image: url('imagens/wallpaper002.jpg') ;
            height: 200px; 
            border: 1px solid black;
            margin: 10px;
            border-radius: 20px;
+           background-repeat: no-repeat; /* nao repetir imagem */
+           background-size: cover; /* deixar a imagem cobrir sem cortar */
+           
+
         }
 
         div#q1 {
