--- a/exercicios/ex027/flex013-menu flexbox/index.html
+++ b/exercicios/ex027/flex013-menu flexbox/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Flexbox</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Meu Site</h1>
+        <nav>
+            <a href="#">Opção 1</a>
+            <a href="#">Opção 2</a>
+            <a href="#">Opção 3</a>
+            <a href="#">Opção 4</a>
+            <a href="#">Opção 5</a>
+            <a href="#">Opção 6</a>
+        </nav>
+
+    </header>
+    <main>
+        <h2>Teste de Flexbox</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis nemo voluptate labore, cum laudantium odio unde ipsa excepturi suscipit eius, aspernatur veritatis placeat tenetur quae necessitatibus! Ipsum itaque harum voluptatem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quasi delectus ea mollitia dolorum architecto consectetur culpa nostrum magnam iusto, quas deleniti odit blanditiis magni? Culpa molestias quidem adipisci unde.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum odio dignissimos culpa ut totam. Provident dicta eligendi, vero ab pariatur tempora, quas ad eum commodi neque harum esse illo dolore!</p>
+
+    </main>
 </body>
 </html>
